--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -35,7 +35,7 @@
         </ion-item>
       </ion-list>
       
-      <ion-button color="warning" fill="solid" shape="round" expand="block">
+      <ion-button (click)="presentModal()" color="warning" fill="solid" shape="round" expand="block">
         <ion-icon slot="start" name="add" color="light"></ion-icon>
         Agregar Comida
       </ion-button>
