--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -30,5 +30,22 @@ ion-item {
   max-width: 30vw;
 }
 .img-receta {
-  max-width: 15vw;
+  max-width: 19vw;
+}
+
+ion-fab-button[title] {
+  position: relative;
+}
+
+ion-fab-button[title]::after {
+  position: absolute;
+  content: attr(title);
+  z-index: 1;
+  right: 55px;
+  bottom: 4px;
+  background-color: var(--ion-color-dark);
+  padding: 9px;
+  border-radius: 15px;
+  color: white;
+  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2), 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12);
 }
