--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -14,18 +14,14 @@
 <ion-content>
     <ion-router-outlet></ion-router-outlet>
     <ion-tabs>
-      <ion-tab-bar slot="bottom,top">
+      <ion-tab-bar color="primary" slot="bottom,top">
         <ion-tab-button tab="items">
-          <ion-icon name="flash"></ion-icon>
-          <ion-label>Tab One</ion-label>
+          <ion-icon name="cube"></ion-icon>
+          <ion-label>Items</ion-label>
         </ion-tab-button>
-        <ion-tab-button tab="/">
-          <ion-icon name="apps"></ion-icon>
-          <ion-label>Tab Two</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="tab3">
-          <ion-icon name="send"></ion-icon>
-          <ion-label>Tab Three</ion-label>
+        <ion-tab-button tab="categorias">
+          <ion-icon name="pricetag"></ion-icon>
+          <ion-label>Categorias</ion-label>
         </ion-tab-button>
       </ion-tab-bar>
     </ion-tabs>
