--- a/src/app/pages/tabs/items/items.page.html
+++ b/src/app/pages/tabs/items/items.page.html
@@ -1,21 +1,5 @@
 <ion-content>
-   <ion-list>
-      <ion-list-header>
-         Tus items Creados
-      </ion-list-header>
-
-      <ion-item *ngFor="let item of array" (click)="presentModal()">
-         <ion-avatar slot="start">
-            <img src="assets/img/default.jpg">
-         </ion-avatar>
-         <ion-label>
-            <h2>Nombre Comida</h2>
-            <h3>cantidad: #</h3>
-            <p>Fecha creado: 2019/04/15</p>
-            <ion-badge color="primary">Categoria</ion-badge>
-         </ion-label>
-      </ion-item>
-   </ion-list>
+   <app-list-item [alimentos]="$alimentos | async" (requestComplete)="obtenerDatos()"></app-list-item>
    <ion-fab (click)="presentModal()" vertical="bottom" horizontal="end" slot="fixed">
       <ion-fab-button color="danger">
          <ion-icon name="add"></ion-icon>
