--- a/src/app/pages/list/components/agregar-alimento/agregar-alimento.component.html
+++ b/src/app/pages/list/components/agregar-alimento/agregar-alimento.component.html
@@ -1,35 +1,41 @@
 <ion-content>
-  <ion-card >
-    <ion-card-header>
-      <ion-card-subtitle mode="md">Seleccione tu alimento</ion-card-subtitle>
-      <ion-card-title mode="md">Alimentos</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <form>
-        <ion-list lines="full">
-          <ion-item>
-            <ion-label>Disponible</ion-label>
-            <ion-select mode="md" ok-text="ok" cancel-text="salir">
-              <ion-select-option value="dos">DOS</ion-select-option>
-              <ion-select-option value="lunix">Linux</ion-select-option>
-              <ion-select-option value="mac7">Mac OS 7</ion-select-option>
-              <ion-select-option value="mac8">Mac OS 8</ion-select-option>
-              <ion-select-option value="win3.1">Windows 3.1</ion-select-option>
-              <ion-select-option value="win95">Windows 95</ion-select-option>
-              <ion-select-option value="win98">Windows 98</ion-select-option>
-            </ion-select>
-          </ion-item>
-          <ion-item>
-            <ion-label position="stacked">Cantidad <ion-text color="danger">*</ion-text></ion-label>
-            <ion-input required type="number"></ion-input>
-          </ion-item>
-        </ion-list>
-      </form>
-    </ion-card-content>
-  </ion-card>
-  <ion-fab (click)="crear()" vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="danger">
-      <ion-icon name="save"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+  <ng-container *ngIf="($alimentos | async) as alimentos; else elseTemplate">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle mode="md">Seleccione tu alimento</ion-card-subtitle>
+        <ion-card-title mode="md">Alimentos</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+
+        <form [formGroup]="form">
+          <ion-list lines="full">
+            <ion-item>
+              <ion-label>Alimentos Disponibles</ion-label>
+              <ion-select formControlName="alimento_id" mode="md" ok-text="ok" cancel-text="salir">
+                <ion-select-option [value]="alimento.id" *ngFor="let alimento of alimentos">{{alimento.nombre}}
+                </ion-select-option>
+              </ion-select>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked">Cantidad <ion-text color="danger">*</ion-text>
+              </ion-label>
+              <ion-input formControlName="cantidad" type="number"></ion-input>
+            </ion-item>
+          </ion-list>
+        </form>
+
+
+
+
+      </ion-card-content>
+    </ion-card>
+    <ion-fab  vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button  (click)="crear()" color="danger" [disabled]="form.invalid">
+        <ion-icon name="save"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </ng-container>
+  <ng-template #elseTemplate>
+
+  </ng-template>
 </ion-content>
