--- a/src/app/pages/tabs/items/components/modal-create/modal-create.component.html
+++ b/src/app/pages/tabs/items/components/modal-create/modal-create.component.html
@@ -8,96 +8,106 @@
             <ion-label color="medium">Foto</ion-label>
           </div>
         </ion-card-content>
-        <form>
+        <form *ngIf="ok" [formGroup]="form">
           <ion-item>
-            <ion-label position="stacked">Alimento<ion-text color="danger">*</ion-text></ion-label>
-            <ion-input required type="text"></ion-input>
+            <ion-label position="stacked">Nombre<ion-text color="danger">*</ion-text></ion-label>
+            <ion-input formControlName="nombre" required type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="stacked">Descripcion<ion-text color="danger">*</ion-text></ion-label>
-            <ion-input required type="text"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="stacked">Cantidad<ion-text color="danger">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-label position="stacked">Peso en Kg<ion-text color="danger">*</ion-text></ion-label>
+            <ion-input formControlName="pb_kg" required type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Precio x Unidad<ion-text color="danger">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="precio_unidad"  required type="number"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label>Categoria</ion-label>
+            <ion-select formControlName="categoria_id" placeholder="Selecciona Una">
+              <ion-select-option *ngFor="let categoria of categorias" [value]="categoria.id">{{categoria.nombre}}</ion-select-option>
+            </ion-select>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">FC<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="fc"  type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">H de C<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="h_d_c" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Prot<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="prot" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Gra<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="grs" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Ca (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="ca" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Fe (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="fe" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Fibra  (gr)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="fibra" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Na (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="na" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Potasio (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="potasio" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Vitamina C (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="vitamina_c" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Vitamina A (ug)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="vitamina_a" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Vitamina E (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="vitamina_e" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Vitamina K (ug)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="vitamina_k" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Colesterol (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="colesterol" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Vitamina B1 (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="vitamina_b1" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Vitamina B6 (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="vitamina_b6" type="number"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="stacked">Vitamina B12 (mg)<ion-text color="warning">*</ion-text></ion-label>
-            <ion-input required type="number" value="0"></ion-input>
+            <ion-input formControlName="vitamina_b12" type="number"></ion-input>
           </ion-item>
+          <ng-container *ngIf="formularioBoton(); else elseTemplate">
+            <ion-button (click)="crear()" expand="full" color="danger" [disabled]="form.invalid">
+              Crear
+            </ion-button>
+          </ng-container>
+          <ng-template #elseTemplate>
+            <ion-button (click)="actualizarComida()" expand="full" color="primary" [disabled]="form.invalid">
+              Actualizar
+            </ion-button>
+          </ng-template>
+          
+          
         </form>
       </ion-card>
-      <ion-fab (click)="crear()" vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button color="danger">
-          <ion-icon name="save"></ion-icon>
-        </ion-fab-button>
-      </ion-fab>
+      
 </ion-content>
