--- a/src/app/pages/tabs/categorias/components/categoria/categoria.component.html
+++ b/src/app/pages/tabs/categorias/components/categoria/categoria.component.html
@@ -2,7 +2,7 @@
   <ion-item *ngFor="let item of categorias" (click)="presentModal(item)">
     <ion-label>
       <ion-badge [color]="item.color">{{item.nombre}}</ion-badge>
-      <h3><i> {{item.descripcion}} </i></h3>
+      <h3> {{item.descripcion}}</h3>
       <p>Fecha creado: {{ item.createdAt | date: 'dd/MM/yyyy'}}</p>
     </ion-label>
   </ion-item>
