--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,49 +1,52 @@
 <!--  -->
 <ion-content>
-  
+
   <ion-list>
     <ng-container *ngIf="($usuario | async) as usuario">
-        <ion-card fxLayout="column" fxLayoutAlign="center center">
-            <img *ngIf="usuario.sexo === 'hombre'" class="profile" src="assets/img/hombre.svg" alt="">
-            <img *ngIf="usuario.sexo === 'mujer'" class="profile" src="assets/img/mujer.svg" alt="">
-            <ion-card-content>
-              <ion-item>
-                <ion-label color="medium" fxLayoutAlign="center center">{{ usuario.username | titlecase }}</ion-label>
-              </ion-item>
-              <ion-text color="medium" fxLayoutAlign="center center">
-                LISTA DE RECETAS
-              </ion-text>
-            </ion-card-content>
-          </ion-card>
+      <ion-card fxLayout="column" fxLayoutAlign="center center">
+        <img *ngIf="usuario.sexo === 'hombre'" class="profile" src="assets/img/hombre.svg" alt="">
+        <img *ngIf="usuario.sexo === 'mujer'" class="profile" src="assets/img/mujer.svg" alt="">
+        <ion-card-content>
+          <ion-item>
+            <ion-label color="medium" fxLayoutAlign="center center">{{ usuario.username | titlecase }}</ion-label>
+          </ion-item>
+          <ion-text color="medium" fxLayoutAlign="center center">
+            LISTA DE RECETAS
+          </ion-text>
+        </ion-card-content>
+      </ion-card>
     </ng-container>
     <ion-item>
       <ion-label class="title" color="medium" fxLayoutAlign="center center">Tus Recetas</ion-label>
-    </ion-item> 
+    </ion-item>
     <ng-container *ngIf="$receta| async as receta;">
-        <app-receta [receta]="receta.data" (completadoReceta)="obtenerDatos()"></app-receta>
+      <app-receta [receta]="receta.data" (completadoReceta)="obtenerDatos()"></app-receta>
     </ng-container>
-    
+
   </ion-list>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button mode="ios" color="warning">
       <ion-icon name="add-circle-outline"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button (click)="irInventario()" title="Inventario" mode="ios"  class="arriba" color="primary">
+      <ion-fab-button (click)="irFavoritos()" title="Favoritos" mode="ios"  class="arriba" color="primary">
+            <ion-icon name="heart" color="danger"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="irInventario()" title="Inventario" mode="ios" class="arriba" color="primary">
         <ion-icon name="logo-dropbox"></ion-icon>
       </ion-fab-button>
       <!-- <ion-text class="label-fab">lavel 1</ion-text> -->
-      <ion-fab-button (click)="presentModal()" mode="ios" title="Crear receta"  color="medium" color="warning">
+      <ion-fab-button (click)="presentModal()" mode="ios" title="Crear receta" color="medium" color="warning">
         <ion-icon name="add-circle-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button (click)="irConfiguracion()" mode="ios" title="Configuracion"  color="medium">
+      <ion-fab-button (click)="irConfiguracion()" mode="ios" title="Configuracion" color="medium">
         <ion-icon name="settings"></ion-icon>
       </ion-fab-button>
-      
+
       <!-- <ion-text class="label-fab">lavel 1</ion-text> -->
     </ion-fab-list>
     <ion-fab-list side="start" (click)="login()">
-      <ion-fab-button mode="ios" title="Salir"   class="izquierda" color="secondary">
+      <ion-fab-button mode="ios" title="Salir" class="izquierda" color="secondary">
         <ion-icon name="logo-instagram"></ion-icon>
       </ion-fab-button>
       <!-- <ion-text class="label-fab">lavel 1</ion-text> -->
