--- a/src/app/pages/login/components/user/user.component.html
+++ b/src/app/pages/login/components/user/user.component.html
@@ -15,7 +15,7 @@
           <ion-input formControlName="nombre" required></ion-input>
         </ion-item>
         <ion-item>
-            <ion-label position="floating" color="medium">Apellido</ion-label>
+            <ion-label position="floating" color="medium">Apellidos</ion-label>
             <ion-input formControlName="apellidos" required></ion-input>
         </ion-item>
         <ion-item>
