--- a/src/app/pages/home/components/update-receta/update-receta.component.html
+++ b/src/app/pages/home/components/update-receta/update-receta.component.html
@@ -1,8 +1,8 @@
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-card-subtitle>Awesome Subtitle</ion-card-subtitle>
-      <ion-card-title>Awesome Title</ion-card-title>
+      <ion-card-subtitle mode="md">Actualizar Receta</ion-card-subtitle>
+      <ion-card-title mode="md">{{obtenerNombre()}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="form" >
@@ -16,10 +16,13 @@
         </ion-item>
         <ion-item>
           <ion-label position="floating">Total Persona <ion-text color="danger">*</ion-text></ion-label>
-          <ion-input required formControlName="total_persona" type="text"></ion-input>
+          <ion-input required formControlName="total_persona" type="number"></ion-input>
         </ion-item>
         <ion-button (click)="actualizar()" color="warning" expand="full" type="submit" [disabled]="form.invalid">
-          Actualizar
+          <ion-text color="light">
+              Actualizar
+          </ion-text>
+          
         </ion-button>
       </form>
     </ion-card-content>
