--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,12 +36,12 @@
   --ion-color-success-tint: #28e070;
 
   /** warning **/
-  --ion-color-warning: #ffce00;
-  --ion-color-warning-rgb: 255, 206, 0;
-  --ion-color-warning-contrast: #ffffff;
-  --ion-color-warning-contrast-rgb: 255, 255, 255;
-  --ion-color-warning-shade: #e0b500;
-  --ion-color-warning-tint: #ffd31a;
+  --ion-color-warning: #F15E4A;
+  --ion-color-warning-rgb: 241,94,74;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0,0,0;
+  --ion-color-warning-shade: #d45341;
+  --ion-color-warning-tint: #f26e5c;
 
   /** danger **/
   --ion-color-danger: #f04141;
